--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,21 @@
+@import "fonts.scss";
+
+//ClearFix hack
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
+
 *{
   padding:0;
   margin:0;
@@ -56,7 +74,7 @@ body{
 .store-location{
   font-size:1.125em;
   font-weight:400;
-  color:#ccc;
+  color:#888;
 }
 //img
 .hero{
@@ -72,7 +90,7 @@ body{
 }
 
 .date{
-  color:#ccc;
+  color:#888;
   font-size:0.975em;
 }
 
@@ -89,10 +107,53 @@ body{
   border-radius: 5px;
 }
 
-.btn:hover{
+.btn:hover, .button-active{
   background-color:rgb(0,106,166);
 }
 
 
+@media (min-width: 600px) and (max-width: 900px){
+  .brand{
+    width:33%;
+  }
+  .card-container{
+    width:66%;
+  }
+  .btn{
+    width:33%;
+  }
+}
+
+
+//Desktop
+@media (min-width: 901px){
+  .brand{
+    width:25%;
+  }
+  .card-container{
+    width:70%;
+    text-align:left;
+  }
+  .location{
+    width:46%;
+    text-align:left;
+    float:right;
+  }
+  .hero{
+    width:50%;
+    float:left;
+  }
+  .time-stamp{
+    width:46%;
+    text-align:left;
+    float:right;
+    padding-left:2%;
+    padding-right:2%;
+  }
+  
+  .btn{
+    display:none;
+  }
+}
 
 
