--- a/css/main.scss
+++ b/css/main.scss
@@ -111,6 +111,12 @@ body{
   background-color:rgb(0,106,166);
 }
 
+//Maps
+#map-canvas{
+  width:100%;
+  height:400px;
+  display:none;
+}
 
 @media (min-width: 600px) and (max-width: 900px){
   .brand{
@@ -143,6 +149,13 @@ body{
     width:50%;
     float:left;
   }
+  
+  #map-canvas{
+    width:50%;
+    display:none;
+    float:left;
+  }
+  
   .time-stamp{
     width:46%;
     text-align:left;
