--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,15 @@ body {
   height: 400px;
   display: none; }
 
+.close-map {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background-color: #000;
+  z-index: 999; }
+
 @media (min-width: 600px) and (max-width: 900px) {
   .brand {
     width: 33%; }
