--- a/css/main.scss
+++ b/css/main.scss
@@ -118,6 +118,18 @@ body{
   display:none;
 }
 
+.close-map{
+  position:absolute;
+  top:0;
+  right:0;
+  width:50px;
+  height:50px;
+  background-color:#000;
+  z-index:999;
+}
+
+// Media quries
+// Tablet
 @media (min-width: 600px) and (max-width: 900px){
   .brand{
     width:33%;
