--- a/css/main.scss
+++ b/css/main.scss
@@ -34,17 +34,14 @@ body{
   background: -webkit-linear-gradient(left, #dddedf 0%,#dddedf 50%,#f2f2f3 50%,#f2f2f3 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top, #dddedf 0%,#dddedf 50%,#f2f2f3 50%,#f2f2f3 100%); /* Opera11.10+ */
   background: -ms-linear-gradient(top, #dddedf 0%,#dddedf 50%,#f2f2f3 50%,#f2f2f3 100%); /* IE10+ */
-  background: linear-gradient(top, #dddedf 0%,#dddedf 50%,#f2f2f3 50%,#f2f2f3 100%); /* W3C */
-  
+  background: linear-gradient(top, #dddedf 0%,#dddedf 50%,#f2f2f3 50%,#f2f2f3 100%); /* W3C */  
 }
 
 .card-container{
-  width:94%;
-  margin:30px auto 30px auto;
-  border:1px solid #ccc;
-  background-color:#fff;
+  width:100%;
+  margin:15px auto;
+  background-color:none;
 }
-
 
 .branding{
   text-align:center;
@@ -64,6 +61,11 @@ body{
 //Store name and location
 .location{
   padding:20px 2%;
+  width:92%;
+  margin:0 auto;
+  border:1px solid #ccc;
+  border-bottom:none;
+  background-color:#FFF;
 }
 
 .store-name{
@@ -82,30 +84,51 @@ body{
   height:auto;
 }
 
+.item-img{
+  padding:0;
+  margin:0;
+  margin-bottom:-5px;
+}
+
 //metadata
+.meta-wrapper{
+  padding:20px 0;
+  width:96%;
+  margin:0 auto;
+  border:1px solid #ccc;
+  border-top:none;
+  background-color:#FFF;
+}
+
 .time-stamp{
   margin-bottom:25px;
+  margin-top:-12px;
   border-bottom:1px solid #ccc;
-  padding:4px 0 5px 0;
+  padding:0 0 5px 0;
 }
 
 .date{
-  color:#888;
+  color:#000;
   font-size:0.975em;
 }
 
 //buttons
+.ui-wrapper{
+  width:90%;
+  margin:-22px auto 30px auto;
+}
+
 .btn{
   background-color:rgb(14,118,188);
   color:#fff;
-  width:60%;
+  width:100%;
   margin:0 auto 25px auto;
-  padding:15px 0;
+  padding:10px 0;
   text-decoration:none;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border:2px solid #1469AA;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border:1px solid #1469AA;
 }
 
 .btn:hover, .button-active{
@@ -142,7 +165,6 @@ body{
     color:#000;
   }
   a:hover{
-    background:#ccc;
   }
 }
 
@@ -167,14 +189,15 @@ body{
     font-size:1.225em;
   }
   
+  .date{
+    font-size:0.6em;
+  }
+  
   .brand{
     width:33%;
   }
   .card-container{
     width:66%;
-  }
-  .btn{
-    width:60%;
   }
 }
 
@@ -191,37 +214,59 @@ body{
     width:70%;
     position:relative;
     text-align:left;
+    background-color:#fff;
+    margin-top:50px;
+    margin-bottom:50px;
+    border:1px solid #ccc;
   }
   .location{
     width:46%;
     text-align:left;
     float:right;
+    border:none;
   }
   .hero{
     width:50%;
     float:left;
+    margin:0;
+    padding:0;
   }
   
   #map-canvas{
     width:50%;
-    display:none;
     float:left;
   }
   
-  .time-stamp{
+  .meta-wrapper{
+    padding:20px 2%;
     width:46%;
-    text-align:left;
+    border:none;
+    background-color:#FFF;
     float:right;
-    padding-left:2%;
-    padding-right:2%;
+  }
+  
+  .time-stamp{
+    width:100%;
+    margin:0;
+    text-align:left;
   }
   
   .btn{
     position:absolute;
     right:2%;
-    bottom:0;
+    bottom:-45px;
     width:46%;
     text-align:center;
+  }
+  
+  //maps desktop
+  #map-canvas{
+    position:absolute;
+    width:50%;
+    height:400px;
+    display:none;
+    right:0;
+    top:100px;
   }
 }
 
