--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,8 @@ you can use the generic selector below, but it's slower:
 
 .icon-clock:before {
   content: "\63";
-  color: #888;
-  font-size: 0.75em; }
+  color: #000;
+  font-size: 0.6em; }
 
 .icon-location:before {
   color: #0A497A;
@@ -98,10 +98,9 @@ body {
   /* W3C */ }
 
 .card-container {
-  width: 94%;
-  margin: 30px auto 30px auto;
-  border: 1px solid #ccc;
-  background-color: #fff; }
+  width: 100%;
+  margin: 15px auto;
+  background-color: none; }
 
 .branding {
   text-align: center; }
@@ -115,7 +114,12 @@ body {
   letter-spacing: 1px; }
 
 .location {
-  padding: 20px 2%; }
+  padding: 20px 2%;
+  width: 92%;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-bottom: none;
+  background-color: #FFF; }
 
 .store-name {
   font-size: 1.125em;
@@ -130,26 +134,44 @@ body {
   width: 100%;
   height: auto; }
 
+.item-img {
+  padding: 0;
+  margin: 0;
+  margin-bottom: -5px; }
+
+.meta-wrapper {
+  padding: 20px 0;
+  width: 96%;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-top: none;
+  background-color: #FFF; }
+
 .time-stamp {
   margin-bottom: 25px;
+  margin-top: -12px;
   border-bottom: 1px solid #ccc;
-  padding: 4px 0 5px 0; }
+  padding: 0 0 5px 0; }
 
 .date {
-  color: #888;
+  color: #000;
   font-size: 0.975em; }
+
+.ui-wrapper {
+  width: 90%;
+  margin: -22px auto 30px auto; }
 
 .btn {
   background-color: #0e76bc;
   color: #fff;
-  width: 60%;
+  width: 100%;
   margin: 0 auto 25px auto;
-  padding: 15px 0;
+  padding: 10px 0;
   text-decoration: none;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 2px solid #1469AA; }
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border: 1px solid #1469AA; }
 
 .btn:hover, .button-active {
   background-color: #006aa6; }
@@ -178,8 +200,6 @@ body {
     display: block;
     width: 100%;
     color: #000; }
-  .maps-directions a:hover {
-    background: #ccc; }
 
 .maps-ui {
   position: absolute;
@@ -198,14 +218,14 @@ body {
   body {
     font-size: 1.225em; }
 
+  .date {
+    font-size: 0.6em; }
+
   .brand {
     width: 33%; }
 
   .card-container {
-    width: 66%; }
-
-  .btn {
-    width: 60%; } }
+    width: 66%; } }
 @media (min-width: 901px) {
   body {
     font-size: 1.275em; }
@@ -216,32 +236,51 @@ body {
   .card-container {
     width: 70%;
     position: relative;
-    text-align: left; }
+    text-align: left;
+    background-color: #fff;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 1px solid #ccc; }
 
   .location {
     width: 46%;
     text-align: left;
-    float: right; }
+    float: right;
+    border: none; }
 
   .hero {
     width: 50%;
-    float: left; }
+    float: left;
+    margin: 0;
+    padding: 0; }
 
   #map-canvas {
     width: 50%;
-    display: none;
     float: left; }
 
-  .time-stamp {
+  .meta-wrapper {
+    padding: 20px 2%;
     width: 46%;
-    text-align: left;
-    float: right;
-    padding-left: 2%;
-    padding-right: 2%; }
+    border: none;
+    background-color: #FFF;
+    float: right; }
+
+  .time-stamp {
+    width: 100%;
+    margin: 0;
+    text-align: left; }
 
   .btn {
     position: absolute;
     right: 2%;
-    bottom: 0;
+    bottom: -45px;
     width: 46%;
-    text-align: center; } }
+    text-align: center; }
+
+  #map-canvas {
+    position: absolute;
+    width: 50%;
+    height: 400px;
+    display: none;
+    right: 0;
+    top: 100px; } }
